--- a/custom_components/wahoo_wftnp/translations/en.json
+++ b/custom_components/wahoo_wftnp/translations/en.json
@@ -13,8 +13,7 @@
         "data": {
           "host": "Host",
           "port": "Port",
-          "name": "Name",
-          "address": "Address"
+          "name": "Name"
         }
       }
     },
